# lax-markup

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: format.rs  idem.rs
src/: format_text.rs  lib.rs  wasm_plugin.rs
src/configuration/: mod.rs
src/generation/: mod.rs  parser.rs  printer.rs  tokenizer.rs
tests/: corpus_test.rs  test.rs
tests/corpus/: NOTICE.md
tests/specs/components/: general.txt
tests/specs/html/: general.txt
tests/specs/xml/: general.txt
